Coroutine sleep studies